[package]
name = "earley"
version = "0.1.0"
authors = ["Shea Newton <shnewto@gmail.com>"]
edition = "2018"

[lib]
name = "earley"
path = "src/lib.rs"

[[bin]]
name = "earley"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnf = "0.3.2"
linked_hash_set = "0.1.4"