[package]
name = "earley"
version = "0.1.0"
authors = ["Shea Newton <shnewto@gmail.com>"]
edition = "2021"

[lib]
name = "earley"
path = "src/lib.rs"

[[bin]]
name = "earley"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bnf]
version = "0.3.2"

[dependencies.linked_hash_set]
version = "0.1.4"

[dependencies.serde]
version = "1.0.118"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.61"